--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "jsdelivr": "dist/ga-lite.min.js",
   "main": "dist/ga-lite.min.js",
   "scripts": {
-    "test:browser": "wdio test/browser-tests/wdio.conf.js",
-    "test:unit": "mocha-webpack --webpack-config webpack.config-test.babel.js test/unit-tests/**/*.js",
-    "test": "npm run test:browser && npm run test:unit",
-    "cover": "NODE_ENV=coverage nyc --reporter=text-lcov npm run test:unit | ./node_modules/coveralls/bin/coveralls.js",
+    "test:browser": "cypress run",
+    "test:unit": "jest ./__tests__/src/*.js",
+    "test": "yarn test:browser && yarn test:unit",
+    "cover": "yarn test:unit --coverage && cat ./coverage/lcov.info | coveralls",
     "build": "webpack",
     "release": "./do_release.sh",
-    "lint": "eslint ./src/**/*.js ./test/**/*.js",
+    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "lint:eslint": "eslint ./src/{**/,}*.js ./__tests__/**/*.js",
+    "lint:prettier": "prettier ./src/{**/,}*.js ./__tests__/**/*.js -c",
     "require-script": "uglifyjs src/require-ga-lite.js --mangle --beautify beautify=false,max_line_len=85"
   },
   "keywords": [
@@ -24,39 +26,20 @@
   "author": "Jesse Luoto",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.1.0",
-    "coveralls": "^3.0.0",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "express": "^4.13.3",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "mocha": "^3.4.2",
-    "mocha-lcov-reporter": "^1.3.0",
-    "mocha-webpack": "^0.7.0",
-    "nyc": "^11.2.1",
-    "uglify-js": "^3.1.2",
-    "wdio-mocha-framework": "^0.5.10",
-    "wdio-phantomjs-service": "^0.2.2",
-    "wdio-spec-reporter": "^0.1.0",
-    "wdio-webpack-service": "^1.0.1",
-    "webdriverio": "^4.8.0",
-    "webpack": "^3.4.1",
-    "webpack-node-externals": "^1.6.0"
-  },
-  "nyc": {
-    "include": [
-      "src/**/*.js"
-    ],
-    "instrument": false,
-    "sourceMap": false
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "coveralls": "^3.0.6",
+    "cypress": "^3.4.1",
+    "eslint": "^6.2.1",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-standard": "^14.0.0",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
+    "uglify-js": "^3.6.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7"
   }
 }
